@@ -474,6 +474,8 @@ int ti92_recv_var_2(char *filename, int mask_mode, TiVarEntry *entry)
 	uint32_t unused;
 	uint8_t utf8[35];
 	int nvar, err;
+    char tipath[18];
+    char *tiname;
 
 	printl2(0, _("Receiving variable(s)...\n"));
 
@@ -495,13 +497,26 @@ int ti92_recv_var_2(char *filename, int mask_mode, TiVarEntry *entry)
 		ve = &(content->entries[nvar-1]);
 		strcpy(ve->folder, "main");	
 
-		err = ti92_recv_VAR(&ve->size, &ve->type, ve->name);
+		err = ti92_recv_VAR(&ve->size, &ve->type, tipath);
 		TRYF(ti92_send_ACK());
 
 		if(err == ERR_EOT)	// end of transmission
 			goto exit;
 		else
 			content->num_entries = nvar;
+
+		// from Christian (TI can send varname or fldname/varname)
+        if ((tiname = strchr(tipath, '\\')) != NULL) 
+		{
+			*tiname = '\0';
+            strcpy(ve->folder, tipath);
+            strcpy(ve->name, tiname + 1);
+        }
+        else 
+		{
+            strcpy(ve->folder, "main");
+            strcpy(ve->name, tipath);
+        }
 
 		tifiles_translate_varname(ve->name, utf8, ve->type);
 		sprintf(update->label_text, _("Receiving '%s'"), utf8);
